idea/testData/multiModuleHighlighting/multiplatform/triangle/base_common/My.kt
expect class <error descr="[NO_ACTUAL_FOR_EXPECT] Expected class 'My' has no actual declaration in module base_Common">My</error>
expect fun <error descr="[NO_ACTUAL_FOR_EXPECT] Expected function 'bar' has no actual declaration in module base_Common">bar</error>()